fixed hot reload script so that it does not run forever.

--- a/static/pages/index.hbs
+++ b/static/pages/index.hbs
@@ -16,7 +16,7 @@
 		<script src="/static/htmx.min.js"></script>
 	</head>
 
-	<body class="bg-blue-100 md:mx-auto py-4 px-8">
+	<body class="bg-red-100 md:mx-auto py-4 px-8">
 		<header class="">
 			<nav class="flex">
 				<div class="w-full flex justify-center">
